--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-streamlit
-pandas
-scikit-learn
-matplotlib
-numpy
+streamlit==1.36.0
+pandas==2.2.1
+numpy==1.26.4
+scikit-learn==1.5.2
+seaborn==0.13.2
+matplotlib==3.8.4
+plotly==5.23.0
+requests==2.32.3
+PyPDF2==3.0.1
 
 
