--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-streamlit==1.36.0
-pandas==2.2.1
-numpy==1.26.4
-scikit-learn==1.5.2
-seaborn==0.13.2
-matplotlib==3.8.4
-plotly==5.23.0
-requests==2.32.3
-PyPDF2==3.0.1
+streamlit>=1.20.0
+pandas>=1.5.0
+numpy>=1.24.0
+matplotlib>=3.6.0
+seaborn>=0.12.0
+scikit-learn>=1.2.0
+scipy>=1.8.0
+openpyxl>=3.0.10
+xlrd>=2.0.1
 
 
