--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-streamlit>=1.20.0
-pandas>=1.5.0
-numpy>=1.24.0
-matplotlib>=3.6.0
-seaborn>=0.12.0
-scikit-learn>=1.2.0
-scipy>=1.8.0
-openpyxl>=3.0.10
-xlrd>=2.0.1
-
-
+streamlit
+pandas
+numpy
+scikit-learn
+plotly
+seaborn
+matplotlib
